@@ -1,3 +1,7 @@
+Version ??? (?????-??-??)
+~~~~~~~~~~~
+- Removed dependency on Boost File System.
+
 Version 0.2 (02005-12-30)
 ~~~~~~~~~~~
 Still not a public release (actually, I'm offline now, so this is out
